bsp-solidrun (7) UNRELEASED; urgency=medium

  * imx8: use diversions
  * imx8: pin glvnd

 -- Josua Mayer <josua@solid-run.com>  Sat, 13 Oct 2018 21:13:04 +0200

bsp-solidrun (6) stable; urgency=medium

  * rename source package
  * add imx8

 -- Josua Mayer <josua@solid-run.com>  Thu, 11 Oct 2018 14:40:13 +0200

bsp-cuboxi (5) stable; urgency=medium

  * introduce boot-script

 -- Josua Mayer <josua@solid-run.com>  Sat, 03 Mar 2018 21:03:35 +0100

bsp-cuboxi (4) stable; urgency=medium

  * explicitly add sdma module to initramfs

 -- Josua Mayer <josua@solid-run.com>  Tue, 14 Mar 2017 20:02:15 +0100

bsp-cuboxi (3) stable; urgency=low

  * renamed firmware package dependency

 -- Josua Mayer <josua@solid-run.com>  Sat, 14 Nov 2015 17:16:45 +0000

bsp-cuboxi (2) stable; urgency=low

  * also pack kernel-release-specific sdma firmware in initramfs

 -- Josua Mayer <josua@solid-run.com>  Mon, 19 Oct 2015 18:01:22 +0200

bsp-cuboxi (1) unstable; urgency=low

  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>

 -- Josua Mayer <josua@solid-run.com>  Sat, 06 Dec 2014 18:32:22 +0100