@@ -2,6 +2,9 @@ bsp-solidrun (7) UNRELEASED; urgency=medium
 
   * imx8: use diversions
   * imx8: pin glvnd
+  * imx6: rename
+  * imx6: pin glvnd
+  * imx6: pull in wifi and sdma firmware directly
 
  -- Josua Mayer <josua@solid-run.com>  Sat, 13 Oct 2018 21:13:04 +0200
 
